--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "custom_textfield_package" "\0"
+            VALUE "FileDescription", "ms_formkit" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "custom_textfield_package" "\0"
+            VALUE "InternalName", "ms_formkit" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "custom_textfield_package.exe" "\0"
-            VALUE "ProductName", "custom_textfield_package" "\0"
+            VALUE "OriginalFilename", "ms_formkit.exe" "\0"
+            VALUE "ProductName", "ms_formkit" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
