--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,19 @@
 name: ms_formkit
-description: "A new Flutter project."
-
-publish_to: "none"
-
-version: 1.0.0+1
+description: "A customizable Flutter form field toolkit with advanced features like password strength, required field validation, prefix/suffix icons, and more."
+version: 1.0.0
+homepage: https://github.com/mshakirmemon786/ms_formkit
 
 environment:
-  sdk: ">=3.2.3 <4.0.0"
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
 
 flutter:
